@@ -1,3 +1,11 @@
+TAG: derivationload-4-2-1-5
+DATE: 04-23-2009
+STAFF:  sc
+CHANGES: TR7493
+1) bug when resolving references fixed
+2) added logging of derivations whose attributes do not resolve i.e.
+   this load is no longer all or nothing
+
 TAG: derivationload-4-2-1-4
 TAG: derivationload-4-2-1-3
 DATE: 04-09-2009
